S302T200-240 #time 50m Investigation into why Cucumber tests were failing. Fixed null pointer exception when trying to findAllById with null argument. Completely changed card's keyword field to be a Set because of Hibernate errors. Changed Cucumber test with card keywords to work with new keyword-card relationship.
?fix ?test